# claude-code-openai-wrapper

./: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  models.py  openapi.yaml  pyproject.toml  rate_limiter.py  tool_handler.py  tools.py
.github/workflows/: claude.yml
examples/: tools_example.py
