[project]
name = "claude-code-openai-wrapper"
version = "1.0.0"
description = "OpenAI API-compatible wrapper for Claude Code"
authors = [{name = "Richard Atkinson", email = "richardatk01@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "sse-starlette>=2.1.3",
    "python-multipart>=0.0.12",
    "claude-code-sdk>=0.0.14",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "requests>=2.32.0",
    "openai>=1.0.0",
]

[project.scripts]
claude-wrapper = "main:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]

[tool.black]
line-length = 100
target-version = ['py310']